--- a/views/myIndex.html
+++ b/views/myIndex.html
@@ -4,16 +4,16 @@
 	<meta charset="UTF-8">
 	<title>我的-登录</title>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-	 <meta name="viewport" content="width=device-width,height=device-height,target-densitydpi=device-dpi,user-scalable = yes,initial-scale=1, minimum-scale=1, maximum-scale=1">
+	 <meta name="viewport" content="width=device-width,height=device-height,user-scalable = yes,initial-scale=1, minimum-scale=1, maximum-scale=1">
 	 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<link rel="stylesheet" href="../public/style/base.css">
 	<link rel="stylesheet" href="../public/style/myIndex.css">
 	<script src="../app.js"></script>
 	<script src="../routes/index.js"></script>
 	<script src="../routes/users.js"></script>
-	<script src="../public/js/zepto.min.js"></script>
-	<script src="../public/js/remstyle.js"></script>
-	<script src="../public/js/myIndex.js"></script>
+	<script src="js/zepto.min.js"></script>
+	<script src="js/remstyle.js"></script>
+	<script src="js/myIndex.js"></script>
 
 </head>
 <body>
